--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,8 @@
 
 body {
     margin: 0;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    
     background-image: url('../images/foolscapbackground.png');
 }
 
@@ -50,6 +51,7 @@ header .title h1 {
     padding: 10px;
     text-align: right;
     list-style-type: none;
+    font-family: 'Oswald', sans-serif;
 }
 
 .menu-and-pic ul li {
@@ -73,8 +75,130 @@ header .title h1 {
 } */
 
 .category {
-
-    padding: 10px 20px;
+    border-radius: 25px;
+    padding: 10px 30px;
     margin: 50px 30px;
+}
+
+.category1 {
     background-image: url('../images/yellowwhite.png');
+}
+
+.category2 {
+    background-color: rgb(217, 240, 207);
+}
+
+.category3 {
+    background-color: rgb(198, 233, 238);
+}
+
+.category-title {
+    font-weight: 700;
+    margin-left: 20px;
+}
+
+.category-subtitle {
+    font-weight: 400;
+    margin-left: 20px;
+}
+
+h3.category-subtitle span {
+    font-family: 'Libre Baskerville', serif;
+}
+
+h4.category-subtitle span {
+    font-weight: 600;
+}
+
+.category-space {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-evenly;
+    max-width: 100%;
+}
+
+.content-box {
+    border:rgb(139, 123, 27);
+    border-radius: 5px;
+    border-style: inset;
+    flex-wrap: wrap;
+    flex-basis: 25em;
+    min-width: 15em;
+    height: 140px;
+    margin: 10px auto;
+    overflow: hidden;
+    position: relative;
+}
+
+.content-image {
+    width: 100%;
+    height: 100%;
+}
+
+.initial-content {
+    width: 100%;
+    height: 100%;
+}
+
+.overlay-content {
+  width: 100%;
+  height: 100%;
+  color: #080808;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: absolute;
+  z-index: 1;
+  transition: 0.6s;
+  top: 100%;
+  left: 0%;
+  opacity: 0.9;
+}
+
+.category1 .overlay-content {
+    background-color:rgb(248, 239, 190);
+}
+
+.category2 .overlay-content {
+    background-color:rgb(201, 241, 198);
+}
+
+.category3 .overlay-content {
+    background-color:rgb(207, 237, 248);
+}
+
+.content-summary {
+  text-align: center;
+  font-size: 1.4em;
+  letter-spacing: 1px;
+  line-height: 1.75rem;
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+}
+
+.content-summary-title, .content-summary-text {
+    margin: 0 10px;   
+}
+
+.content-summary img {
+    margin: 0 auto;
+    width: 25%;
+    position: absolute;
+}
+
+.overlay-content span {
+    display: block;
+}
+
+.overlay-content a {
+    color: inherit;
+    margin: 0 10%;
+}
+
+.content-box:hover .overlay-content {
+    /* left: 0; */
+    transform: translateY(-100%);
 }
