--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,7 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    
-    background-image: url('../images/foolscapbackground.png');
+    background-image: url('../images/forest6.png');
 }
 
 header {
@@ -13,7 +12,7 @@ header {
     /* to align title div vertically within header: */
     display: flex;
     align-items: center;
-    background-image: url(../images/blackheaderbg.png);
+    background-color: rgba(0, 0, 0, 0.7);
     margin-bottom: 20px;
 }
 
@@ -60,7 +59,16 @@ header .title h1 {
 }
 
 .menu-link {
-    color: rgb(255, 255, 255)
+    color: brown;
+}
+
+.clickable {
+    transition: transform .2s;
+    color: white;
+}
+
+.clickable:hover {
+    transform: scale(1.5);
 }
 
 .menu-and-pic img {
@@ -77,7 +85,7 @@ header .title h1 {
 .category {
     border-radius: 25px;
     padding: 10px 30px;
-    margin: 50px 30px;
+    margin: 50px;
 }
 
 .category1 {
@@ -85,11 +93,11 @@ header .title h1 {
 }
 
 .category2 {
-    background-color: rgb(217, 240, 207);
+    background-color: rgba(217, 240, 207, 0.9);
 }
 
 .category3 {
-    background-color: rgb(198, 233, 238);
+    background-color: rgba(198, 233, 238, 0.9);
 }
 
 .category-title {
