--- a/css/index.css
+++ b/css/index.css
@@ -54,20 +54,18 @@ header .title h1 {
 }
 
 .menu-and-pic ul li {
-    font-size: 25px;
+    font-size: 30px;
     padding: 3px 0;
+    color: white;
 }
 
 .menu-link {
-    color: brown;
-}
-
-.clickable {
+    font-size: 25px;
     transition: transform .2s;
     color: white;
 }
 
-.clickable:hover {
+.menu-link:hover {
     transform: scale(1.5);
 }
 
@@ -89,7 +87,7 @@ header .title h1 {
 }
 
 .category1 {
-    background-image: url('../images/yellowwhite.png');
+    background-color: 	rgba(250, 250, 208, 0.9);
 }
 
 .category2 {
@@ -163,18 +161,7 @@ h4.category-subtitle span {
   top: 100%;
   left: 0%;
   opacity: 0.9;
-}
-
-.category1 .overlay-content {
-    background-color:rgb(248, 239, 190);
-}
-
-.category2 .overlay-content {
-    background-color:rgb(201, 241, 198);
-}
-
-.category3 .overlay-content {
-    background-color:rgb(207, 237, 248);
+  background-color: white;
 }
 
 .content-summary {
