--- a/css/index.css
+++ b/css/index.css
@@ -87,14 +87,18 @@ header .title h1 {
 }
 
 .category1 {
-    background-color: 	rgba(250, 250, 208, 0.9);
+    background-color: 	rgba(252, 225, 217, 0.9);
 }
 
 .category2 {
-    background-color: rgba(217, 240, 207, 0.9);
+    background-color: 	rgba(250, 250, 208, 0.9);
 }
 
 .category3 {
+    background-color: rgba(217, 240, 207, 0.9);
+}
+
+.category4 {
     background-color: rgba(198, 233, 238, 0.9);
 }
 
