--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -39,6 +39,24 @@ header .title h1 {
     text-align: center;
 }
 
+
+/* remember to add JS to make background darken and deactivate clicks when popup appears. */
+#popup {
+    height: 60vh;
+    width: 60vw;
+    /* visibility: hidden; */
+    position: fixed;
+    left: 20vw;
+    top: 20vh;
+    border-radius: 8%;
+    background-color: rgb(241, 237, 231);
+}
+
+#popup form {
+    position: static;
+    margin: auto;
+}
+
 .menu-and-pic {
     position: absolute;
     right: 0;
@@ -96,7 +114,8 @@ header .title h1 {
     border-radius: 4%;
     text-align: center;
     color: white;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #info-title, #get-in-touch {
@@ -120,7 +139,13 @@ div#email{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 40px;
+    margin: 0 0 40px 0;
+    transition: all .2s ease 0s;
+    cursor: pointer;
+}
+
+div#email:hover {
+    transform: scale(1.2);
 }
 
 div#email img {
