--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -50,12 +50,22 @@ header .title h1 {
     top: 20vh;
     border-radius: 8%;
     background-color: rgb(241, 237, 231);
+    display :flex;
     align-items: center;
+    justify-content: center;
 }
 
 #popup form {
     position: static;
+    height: 70%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
+
+
 
 .menu-and-pic {
     position: absolute;
