--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -37,6 +37,19 @@ header .title h1 {
     font-size: 70px;
     margin: 0;
     text-align: center;
+    transform:translateX(-50px);
+}
+
+header .title h3 {
+    font-size: 20px;
+    text-align: center;
+    font-style: italic;
+    font-weight: normal;
+    font-family: 'Lato', sans-serif;
+    margin: 0 auto;
+    color:rgb(232, 219, 188);
+    transform:translateX(40px);
+    margin-top: 5px;
 }
 
 
