--- a/css/blog.css
+++ b/css/blog.css
@@ -14,8 +14,10 @@ header#main-header {
     /* to align title div vertically within header: */
     display: flex;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgb(23, 19, 28);
     margin-bottom: 50px;
+    z-index: 2;
+    position: relative;
 }
 
 header#main-header .title {
@@ -50,7 +52,7 @@ header#main-header .title h3 {
     font-family: 'Lato', sans-serif;
     margin: 0 auto;
     transform:translateX(-50px);
-    color:thistle;
+    color:rgb(220, 205, 220);
 }
 
 .menu-and-pic {
@@ -98,12 +100,10 @@ header#small-header {
     left: 0;
     right: 0;
     height: 100px;
-    
     background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
-    visibility: hidden;
 }
 
 header#small-header ul {
