done with outline for blog!

--- a/css/index.css
+++ b/css/index.css
@@ -15,8 +15,8 @@ header#main-header {
     align-items: center;
     background-color: rgba(0, 0, 0, 1);
     margin-bottom: 20px;
-    z-index: 2;
     position: relative;
+    z-index: 2;
 }
 
 header .title {
@@ -95,7 +95,6 @@ header .title h3 {
 
 header#small-header {
     position: fixed;
-    z-index: 1;
     top: 0;
     left: 0;
     right: 0;
@@ -103,7 +102,13 @@ header#small-header {
     background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;transition-duration: .3s;
+    z-index: 1;
+}
+
+#small-header:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
 }
 
 header#small-header ul {
