--- a/css/blog.css
+++ b/css/blog.css
@@ -15,7 +15,7 @@ header#main-header {
     display: flex;
     align-items: center;
     background-color: rgb(23, 19, 28);
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     z-index: 2;
     position: relative;
 }
@@ -67,6 +67,7 @@ header#main-header .title h3 {
     text-align: right;
     list-style-type: none;
     font-family: 'Oswald', sans-serif;
+    font-weight: 500;
 }
 
 .menu-and-pic ul li {
@@ -95,7 +96,6 @@ header#main-header .title h3 {
 
 header#small-header {
     position: fixed;
-    z-index: 1;
     top: 0;
     left: 0;
     right: 0;
@@ -104,6 +104,13 @@ header#small-header {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition-duration: .3s;
+    z-index: 1;
+}
+
+#small-header:hover{
+    opacity: .8;
+    z-index: 1;
 }
 
 header#small-header ul {
@@ -140,6 +147,103 @@ header#small-header li {
 
 /* END OF BOTH NAV BARS. START MAIN BODY */
 
-#long {
-    height: 2000px;
+.left-area {
+    position: fixed;
+    left: 0;
+    width: 20vw;
+    height: 100%;
+    background-color: rgba(216, 195, 249, 0.85);
+}
+
+
+div.filter {
+    position: fixed;
+    left: 3.5vw;
+    width: 15vw;
+    /* background-color: rgba(216, 195, 249, 0.85); */
+    border-radius: 5%;
+    margin-top: 25px;
+}
+
+form.filter {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Oswald', sans-serif;
+    color: rgb(29, 14, 61);
+}
+
+.inputlabel {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+input[type='checkbox'] {
+    appearance: none;
+    margin-right: 5px;
+    margin-left: 0;
+    height: 20px;
+    width: 20px;
+    border-radius: 10%;
+    background-color: slategrey;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.filter label {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+input[type='checkbox']:after {
+    font-family: 'Font Awesome 5 Free';
+    content: '\f00c';
+    font-weight: 900;
+    font-size: 15px;
+    display: none;
+}
+
+input[type='checkbox']:hover {
+    background-color: rgb(161, 170, 180);
+}
+
+input[type='checkbox']:checked {
+    background-color: rgb(82, 99, 214);
+}
+
+input[type='checkbox']:checked::after {
+    display: block;
+}
+
+.filter-category {
+    padding: 15px 20px;
+}
+
+.filter p {
+    margin: 0;
+    font-weight: 400;
+}
+
+
+
+
+
+#main-area {
+    position: fixed;
+    margin-top: 10px;
+    left: 25vw;
+    right: 5vw;
+    color: black;
+}
+
+.blog-entry {
+    padding: 10px 20px;
+    margin: 30px auto;
+    background-color: seashell;
+}
+
+.reviews {
+    background-color: rgba(225, 200, 199, 0.95);
 }
