--- a/css/blog.css
+++ b/css/blog.css
@@ -99,7 +99,7 @@ header#small-header {
     left: 0;
     right: 0;
     height: 100px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(7, 7, 68, 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,7 +108,7 @@ header#small-header {
 }
 
 #small-header:hover{
-    background-color: rgba(0, 0, 0, 0.8);;
+    background-color: rgba(7, 7, 68, 0.8);;
     z-index: 1;
 }
 
@@ -245,14 +245,39 @@ input[type='checkbox']:checked::after {
     color: black;
 }
 
+#main-area a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .blog-entry {
     padding: 10px 30px;
     margin: 30px auto;
     font-family: 'Poppins', sans-serif;
+    transition-duration: .3s;
+    border-radius: 30px;
+}
+
+.blog-entry.professional:hover {
+    border-radius: 0;
+    background-color: rgb(59, 60, 53);
+    color: white;
+}
+
+.blog-entry.personal:hover {
+    border-radius: 0;
+    background-color: rgb(129, 142, 63);
+    color: white;
+}
+
+.blog-entry.reviews:hover {
+    border-radius: 0;
+    background-color: rgb(162, 107, 106);
+    color: white;
 }
 
 .professional {
-    background-color: rgba(255, 250, 250, 0.95);
+    background-color: rgba(246, 248, 237, 0.95);
 }
 
 .personal {
