--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,12 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background-image: url('../images/forest4.jpg');
+    /* background-image: url('../images/forest4.jpg');
+    background-size: cover; */
+    
+    background-image: url("../images/forest1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
 }
 
@@ -144,14 +149,19 @@ header#small-header li {
 
 
 /* main region */
-/* #main-body-area {
-    
-} */
+#main-body-area {
+    margin: 0 25px;
+}
 
 .category {
     border-radius: 25px;
     padding: 10px 30px;
     margin: 50px;
+    transition-duration: .3s;
+}
+
+.category:hover {
+    border-radius: 0;
 }
 
 .category1 {
@@ -168,6 +178,22 @@ header#small-header li {
 
 .category4 {
     background-color: 	rgba(252, 225, 217, 0.9);
+}
+
+.category1:hover {
+    background-color: rgb(198, 233, 238);
+}
+
+.category2:hover {
+    background-color: 	rgb(250, 250, 208);
+}
+
+.category3:hover {
+    background-color: rgb(217, 240, 207);
+}
+
+.category4:hover {
+    background-color: 	rgb(252, 225, 217);
 }
 
 .category-title {
@@ -201,8 +227,8 @@ h4.category-subtitle span {
     border-radius: 5px;
     border-style: inset;
     flex-wrap: wrap;
-    flex-basis: 25em;
-    min-width: 15em;
+    flex-basis: 24em;
+    min-width: 12em;
     height: 140px;
     margin: 10px auto;
     overflow: hidden;
