--- a/css/blog.css
+++ b/css/blog.css
@@ -1,14 +1,14 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background-image: url("../images/forrest.jpg");
+    background-image: url("../images/foolscap2.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
 
 header#main-header {
-    background-color:rgb(7, 7, 68);
+    background-color:rgb(128, 24, 24);
     height: 180px;
     padding: 15px 0;
     /* to align title div vertically within header: */
@@ -51,7 +51,6 @@ header#main-header .title h3 {
     font-family: 'Lato', sans-serif;
     margin: 0 auto;
     transform:translateX(-50px);
-    color:rgb(220, 205, 220);
 }
 
 .menu-and-pic {
@@ -91,6 +90,10 @@ header#main-header .title h3 {
     height: 210px;
 }
 
+.menu-and-pic img:hover {
+    transform: scaleX(-1);
+}
+
 /* END OF TOP BAR */
 
 header#small-header {
@@ -99,7 +102,7 @@ header#small-header {
     left: 0;
     right: 0;
     height: 100px;
-    background-color: rgba(7, 7, 68, 0.6);
+    background-color: rgba(83, 0, 0, 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,7 +111,7 @@ header#small-header {
 }
 
 #small-header:hover{
-    background-color: rgba(7, 7, 68, 0.8);;
+    background-color: rgba(0, 0, 0, 0.8);;
     z-index: 1;
 }
 
@@ -124,7 +127,6 @@ header#small-header li {
     padding: 0 20px;
     font-size: 25px;
     font-family: 'Oswald', sans-serif;
-    color: white;
 }
 
 .current-s a {
@@ -152,7 +154,7 @@ header#small-header li {
     width: 20vw;
     height: 200%;
     transform: translateY(-210px);
-    background-color: rgba(216, 195, 249, 0.85);
+    /* background-color: rgba(216, 195, 249, 0.85); */
 }
 
 
@@ -175,7 +177,6 @@ form.filter {
     display: flex;
     flex-direction: column;
     font-family: 'Oswald', sans-serif;
-    color: rgb(29, 14, 61);
     margin-top: 10px;
 }
 
@@ -217,7 +218,7 @@ input[type='checkbox']:hover {
 }
 
 input[type='checkbox']:checked {
-    background-color: rgb(82, 99, 214);
+    background-color: rgba(231, 0, 0, 0.658);
 }
 
 input[type='checkbox']:checked::after {
@@ -256,34 +257,25 @@ input[type='checkbox']:checked::after {
     font-family: 'Poppins', sans-serif;
     transition-duration: .3s;
     border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-style: solid;
+    border-width: 3px;
 }
 
-.blog-entry.professional:hover {
+.blog-entry:hover {
     border-radius: 0;
-    background-color: rgb(59, 60, 53);
-    color: white;
-}
-
-.blog-entry.personal:hover {
-    border-radius: 0;
-    background-color: rgb(129, 142, 63);
-    color: white;
-}
-
-.blog-entry.reviews:hover {
-    border-radius: 0;
-    background-color: rgb(162, 107, 106);
+    background-color: rgb(46, 46, 46);
     color: white;
 }
 
 .professional {
-    background-color: rgba(246, 248, 237, 0.95);
+    border-color: black;
 }
 
 .personal {
-    background-color: rgba(232, 240, 191, 0.95);
+    border-color: brown;
 }
 
 .reviews {
-    background-color: rgba(225, 200, 199, 0.95);
+    border-color: darkblue;
 }
