--- a/css/index.css
+++ b/css/index.css
@@ -96,6 +96,10 @@ header .title h3 {
     height: 210px;
 }
 
+.menu-and-pic img:hover {
+    transform: scaleX(-1);
+}
+
 
 
 header#small-header {
@@ -169,15 +173,15 @@ header#small-header li {
 }
 
 .category2 {
-    background-color: 	rgba(250, 250, 208, 0.9);
+    background-color: rgba(202, 242, 207, 0.9);
 }
 
 .category3 {
-    background-color: rgba(217, 240, 207, 0.9);
+    background-color: rgba(206, 241, 246, 0.9);
 }
 
 .category4 {
-    background-color: 	rgba(252, 225, 217, 0.9);
+    background-color: rgba(202, 242, 207, 0.9);
 }
 
 .category1:hover {
@@ -185,15 +189,15 @@ header#small-header li {
 }
 
 .category2:hover {
-    background-color: 	rgb(250, 250, 208);
+    background-color: 	rgba(202, 242, 207);
 }
 
 .category3:hover {
-    background-color: rgb(217, 240, 207);
+    background-color: rgb(198, 233, 238);
 }
 
 .category4:hover {
-    background-color: 	rgb(252, 225, 217);
+    background-color: 	rgba(202, 242, 207);
 }
 
 .category-title {
@@ -259,7 +263,7 @@ h4.category-subtitle span {
   align-items: center;
   overflow: hidden;
   position: absolute;
-  z-index: 1;
+  /* z-index: 1; */
   transition: 0.6s;
   top: 100%;
   left: 0%;
