--- a/css/entry.css
+++ b/css/entry.css
@@ -50,6 +50,40 @@ li a:hover {
     font-size: 28px;
 }
 
-.longgg {
-    height: 2200px;
+#text-area {
+    margin: auto;
+    margin-top: 110px;
+    width: 65%;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    padding-bottom: 50px;
+}
+
+#book-title {
+    padding-top: 50px;
+    margin: 0;
+    text-align: center;
+    font-family: 'Faustina', serif;
+    font-weight: 900;
+}
+
+#author {
+    padding-bottom: 50px;
+    margin: 0;
+    text-align: center;
+    text-decoration-line: underline;
+    font-family: 'Assistant', sans-serif;
+    font-size: 22px;
+}
+
+.chapter-title {
+    font-family: 'Playfair Display', serif;
+    margin-left: 30px;
+}
+
+.content-paragraph {
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 30px;
 }
