--- a/css/entry.css
+++ b/css/entry.css
@@ -5,8 +5,25 @@ html {
 body {
     margin: 0;
     font-family: inherit;
-    background-image: url('../images/tech.jpg');
 }
+
+body::after {
+    content: "";
+    background: url("../images/bigtech4.jpg");
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    z-index: -1;   
+     /* TO make fit perfectly */
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* end */
+  }
 
 header {
     background-color: rgb(0, 0, 0, 0.6);
@@ -57,7 +74,8 @@ li a:hover {
 
 #content-bar {
     position: fixed;
-    width: 17.2vw;
+    left: 2vw;
+    width: 16vw;
     height: 50vh;
     font-family: 'Squada One', cursive;
     display: flex;
@@ -66,15 +84,26 @@ li a:hover {
     text-align: center;
     top: 50%;
     color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     margin-top: -25vh; /* Negative half of height. */
     border-radius: 10px;
+    transition: background-color 0.2s;
+}
+
+#content-bar:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 #content-bar a {
     color: rgb(255, 255, 255);
     font-size: 20px;
     text-decoration: none;
+    transition: .2s;
+}
+
+#content-bar a:hover {
+    transform: scale(1.2);
+    text-decoration-line: underline;
 }
 
 #content-bar h2 {
@@ -97,7 +126,7 @@ li a:hover {
 #text-area {
     margin: auto;
     margin-top: 110px;
-    width: 65%;
+    width: 60%;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     padding-bottom: 50px;
