--- a/css/index.css
+++ b/css/index.css
@@ -5,20 +5,20 @@ body {
     /* background-image: url('../images/forest4.jpg');
     background-size: cover; */
     
-    background-image: url("../images/forest1.jpg");
+    background-image: url("../images/coding1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
 
 header#main-header {
-    background-color:rgb(6, 6, 99);
+    background-color:rgb(0, 0, 75);
     height: 180px;
     padding: 15px 0;
     /* to align title div vertically within header: */
     display: flex;
     align-items: center;
-    background-color: rgba(0, 0, 0, 1);
+    /* background-color: rgba(0, 0, 0, 1); */
     margin-bottom: 20px;
     position: relative;
     z-index: 2;
@@ -173,7 +173,8 @@ header#small-header li {
 }
 
 .category2 {
-    background-color: rgba(202, 242, 207, 0.9);
+    /* background-color: rgba(202, 242, 207, 0.9); */
+    background-color: rgba(247, 243, 192, 0.9);
 }
 
 .category3 {
@@ -185,11 +186,11 @@ header#small-header li {
 }
 
 .category1:hover {
-    background-color: rgb(198, 233, 238);
+    background-color: rgb(255, 255, 255);
 }
 
 .category2:hover {
-    background-color: 	rgba(202, 242, 207);
+    background-color: 	rgb(255, 255, 255);
 }
 
 .category3:hover {
