--- a/css/index.css
+++ b/css/index.css
@@ -2,14 +2,30 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    /* background-image: url('../images/forest4.jpg');
-    background-size: cover; */
     
-    background-image: url("../images/coding1.jpg");
+    /* background-image: url("../images/coding1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: cover; */
 }
+
+body::after {
+    content: "";
+    background: url("../images/coding1.jpg");
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    z-index: -1;   
+     /* TO make fit perfectly */
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* end */
+  }
 
 header#main-header {
     background-color:rgb(0, 0, 75);
@@ -158,9 +174,11 @@ header#small-header li {
 }
 
 .category {
-    border-radius: 25px;
+    border-radius: 20px;
     padding: 10px 30px;
-    margin: 50px;
+    margin: 70px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     transition-duration: .3s;
 }
 
@@ -232,7 +250,7 @@ h4.category-subtitle span {
     border-radius: 5px;
     border-style: inset;
     flex-wrap: wrap;
-    flex-basis: 24em;
+    flex-basis: 23em;
     min-width: 12em;
     height: 140px;
     margin: 10px auto;
