--- a/css/index.css
+++ b/css/index.css
@@ -317,8 +317,8 @@ h4.category-subtitle span {
 .overlay-content a {
     color: inherit;
     margin: 0 10%;
-    padding: 0 1%;
-    border-radius: 10%;
+    padding: 0 10px;
+    border-radius: 10px;
     transition: 0.5s;
 }
 
