--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -255,6 +255,59 @@ div#email img {
         margin: 0 auto;
     }
 
-    header {
+    header .title {
+        width: 50vw;
+        color: white;
+        /* float: none; */
+        position: absolute;
+        padding: 0 5vw;
+        font-family: 'Libre Baskerville', serif;
+        font-weight: 500;
     }
+
+    header .title h1 {
+        font-size: 50px;
+    }
+
+    header .title h2 {
+        font-size: 30px;
+    }
+
+    header .title h3 {
+        font-size: 15px;
+    }
+
+    
+.menu-and-pic {
+    position: absolute;
+    right: 0;
+    display: inline-flex;
+}
+
+.menu-and-pic ul {
+    margin: auto;
+    padding: 10px;
+    text-align: right;
+    list-style-type: none;
+    font-family: 'Oswald', sans-serif;
+}
+
+.menu-and-pic ul li {
+    font-size: 30px;
+    padding: 3px 0;
+    color: white;
+}
+
+.menu-link {
+    font-size: 25px;
+    padding: 0 5%;
+    border-radius: 8%;
+    color: rgb(153, 153, 153);
+    transition: color 0.3s ease;
+}
+
+.menu-and-pic img {
+    display: none;
+}
+
 }
