added my name at bottom of dont be evil

--- a/css/entry.css
+++ b/css/entry.css
@@ -140,13 +140,19 @@ li a:hover {
     font-weight: 900;
 }
 
-#author {
+.author {
     padding-bottom: 50px;
     margin: 0;
     text-align: center;
     text-decoration-line: underline;
     font-family: 'Assistant', sans-serif;
     font-size: 22px;
+}
+
+.review {
+    padding-top: 50px;
+    padding-bottom: 20px;
+    text-decoration: none;
 }
 
 .chapter-title {
